Kubernetes/Assignments/A4_PV_PVC_Taint_deployment.yaml
apiVersion: v1
kind: Pod
metadata:
  name: example-pod
spec:
  containers:
  - name: example-container
    image: nginx
    volumeMounts:
    - mountPath: "/mnt/data"
      name: example-storage
  volumes:
  - name: example-storage
    persistentVolumeClaim:
      claimName: example-pvc
  tolerations:
  - key: "key"
    operator: "Equal"
    value: "value"
    effect: "NoSchedule"
  nodeSelector:
    kubernetes.io/hostname: node-1  # Ensuring the pod runs on node-1
