Kubernetes/Assignments/A5_Apache_ClusterIP.yaml
apiVersion: v1
kind: Service
metadata:
  name: apache-service
spec:
  type: ClusterIP
  selector:
    app: apache
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
